# MSHost

./: .gitignore  CMakeLists.txt  README.md  config ex.json  launch.bat  planning.txt  tokens_ex
site/: auth.html  index.html
site/assets/css/: index.css
site/assets/js/: index.js
src/: CaddyManager.cpp  httpServer.cpp  main.cpp  main_backup.cpp  minecraftservermanager.cpp  rcon_client.cpp
src/app/: application.cpp
src/core/: application.h  process_manager.cpp  process_manager.h
src/domain/instance/: instance_manager.cpp  instance_manager.h
src/includes/: caddy_manager.h  httpServer.h  logger.h  minecraft_sv_manager.h  minecraftservermanager.h  rcon_client.h  server_status.h  web_sv.h
src/infrastructure/ipc/: ipc_client.cpp  ipc_client.h  ipc_server.cpp
src/infrastructure/logger/: logger.h
src/infrastructure/process/: process_manager.cpp  process_manager.h
src/services/: auth_service.h  caddy_manager.cpp  minecraft_sv_manager.cpp  rcon_client.cpp  rcon_client.h  web_sv.cpp  web_sv.h
src/shared/: console.h
src/utils/: console.cpp
src/utils/ipc/: ipc_server.h
src/workers/: mc_worker.cpp  mc_worker.h  web_worker.cpp  web_worker.h
